fix: open browser correctly on Windows for OAuth login